Place CoverColumn last, to not interfere with other columns

BUG: 482210